PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Apr 2006, PHP 5.1.3
- Fixed bug #37103 (libmbfl headers not installed). (Jani)
- Fixed bug #37083 (Frequent crashs in SOAP extension with new WSDL caching
  code in multithread WS). (Andrei, Dmitry)
- Fixed bug #37062 (compile failure on ARM architecture). (Tony)
- Fixed bug #37061 (curl_exec() doesn't zero-terminate binary strings). (Tony)
- Fixed bug #37060 (Type of retval of Countable::count() is not checked). 
  (Johannes)
- FIxed bug #37059 (oci_bind_by_name() doesn't support RAW and LONG RAW 
  fields). (Tony)
- Fixed bug #37057 (xmlrpc_decode() may produce arrays with numeric strings, 
  which are unaccessible). (Tony)
- Fixed bug #37055 (incorrect reference counting for persistent OCI8 
  connections). (Tony)
- Fixed bug #37054 (SoapClient Error Fetching http headers). (Dmitry)
- Fixed bug #37053 (html_errors with internal classes produces wrong links). 
  (Tony)
- Fixed bug #37046 (foreach breaks static scope). (Dmitry)
- Fixed bug #37045 (Fixed check for special chars for http redirects). (Ilia)
- Fixed bug #37002 (Have to quote literals in INI when concatenating with
  vars). (Dmitry)
- Fixed Bug #36872 (session_destroy() fails after call to 
  session_regenerate_id(true)). (Ilia)
- Fixed bug #36513 (comment will be outputed in last line). (Dmitry)
- Fixed bug #29476 (sqlite_fetch_column_types() locks the database forever).
  (Ilia)

06 Apr 2006, PHP 5.1.3RC3
- Eliminated run-time constant fetching for TRUE, FALSE and NULL. (Dmitry)
- Changed SOAP extension to cache WSDL structure in memory and thus speed up
  SoapClient/SoapServer construction. (Andrei, Dmitry)
- Removed the E_STRICT deprecation notice from "var". (Ilia)
- Added overflow checks to wordwrap() function. (Ilia)
- Added support for BINARY_DOUBLE and BINARY_FLOAT to PDO_OCI and OCI8 
  (also fixes bug #36764). (Tony)