@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? Apr 2006, PHP 5.1.3
+- Fixed bug #37138 (__autoload tries to load callback'ed self and parent).
+  (Dmitry)
 - Fixed bug #37103 (libmbfl headers not installed). (Jani)
 - Fixed bug #37083 (Frequent crashs in SOAP extension with new WSDL caching
   code in multithread WS). (Andrei, Dmitry)
